# cpp-introductory-day

./: .exec-helper  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE.md  Readme.md  docker-compose.yml  editors.Dockerfile  xserver.Dockerfile
cmake/modules/: FindSFML.cmake
exercises/: CMakeLists.txt  pong.cpp
exercises/solutions/: CMakeLists.txt
exercises/solutions/session1/: CMakeLists.txt  exercise-1.2.cpp  smartBall.h
exercises/solutions/session2/: CMakeLists.txt  exercise-2.3.cpp  smartBall.cpp
exercises/solutions/session3/: CMakeLists.txt  bat.cpp  exercise-3.1.cpp  smartBall.cpp
session1/: CMakeLists.txt
session1/solutions/: exercise-1.1.cpp  exercise-1.2.cpp  exercise-1.3.cpp  exercise-1.4.cpp  exercise-1.5.cpp  smartBall.cpp
session2/: CMakeLists.txt
session2/solutions/: bat.h  exercise-2.2.cpp  exercise-2.3.cpp  exercise-2.4.cpp  smartBall.h
session3/: CMakeLists.txt  pong.cpp
session3/solutions/: exercise-3.1.cpp  exercise-3.2.cpp  smartBall.h
utils/: CMakeLists.txt  movableRectangle.h  movableRetangle.cpp  pongUtils.cpp  pongUtils.h
